---
source: compiler-core/src/erlang/tests/case.rs
expression: "\npub fn main() {\n  case [] {\n    [..] -> 1\n  }\n}\n"
---
----- SOURCE CODE

pub fn main() {
  case [] {
    [..] -> 1
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> integer().
main() ->
    case [] of
        _ ->
            1
    end.
